init: add header component and search input

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<div class="header-block">
+    <div class="flex-row">
+        <app-logo></app-logo>
+        <app-search></app-search>
+    </div>
+
+</div>
