feat: add layout and basic logic

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,1 +1,6 @@
-<p>list works!</p>
+<div class="grid-container">
+    <app-item class="grid-item"
+    *ngFor="let item of this.items"
+    [item]="item">
+  </app-item>
+  </div>
