--- a/src/app/loginBlock/loginBlock.component.html
+++ b/src/app/loginBlock/loginBlock.component.html
@@ -1,1 +1,6 @@
-<p>authentication works!</p>
+<div>
+    <span class="bottom">Your Name</span>
+    <img class="border-round margin-small"
+         alt="main.jpg" 
+         src="../../assets/loginIcon.png">
+</div>
