--- a/src/app/searchInput/search.component.html
+++ b/src/app/searchInput/search.component.html
@@ -5,5 +5,5 @@
       id="search"
       value="search"
     />
-    <button class="button">Search</button>
+    <button class="button" (click)="this.searchClickHandler()">Search</button>
   </div>
