--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-header></app-header>
+<app-header (searchEmitter)="handleEventFromSearch()"></app-header>
+<div *ngIf="hasSearch">
+    <app-list></app-list>
+</div>
