--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,10 +2,30 @@
     background-color: #e5e1e1;
     height: 150px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     padding-top: 30px;
+    align-items: center;
 }
 
 .flex-row {
     display: flex;
+}
+
+.margin {
+    margin-left: 12px;
+    padding-top: 4px;
+}
+
+.login-position {
+    position: relative;
+    left: 420px;
+}
+
+.margin-top {
+    margin-top: 40px;
+}
+
+.sort-position {
+    position: relative;
+    right: 34px;
 }
