--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,11 @@
 <div class="header-block">
     <div class="flex-row">
         <app-logo></app-logo>
-        <app-search></app-search>
+        <app-search (searchEmitter)="handleEventFromSearch()"></app-search>
+        <app-settings class="margin"></app-settings>
+        <app-login-block class="login-position"></app-login-block>
     </div>
-
+    <div class="margin-top">
+        <app-sort class="sort-position"></app-sort>
+    </div>
 </div>
