--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,1 +1,17 @@
-<p>item works!</p>
+<div class="item-block border" [class]="this.borderColor">
+    <img class="image" src = {{item.snippet.thumbnails.default.url}}/>
+    <div class="flex-center">
+        <img src="../../assets/viewsIcon.png">
+        <span class="margin-small font-small">{{item.statistics.viewCount}}</span>
+        <img class="margin-medium" src="../../assets/likesIcon.png">
+        <span class="margin-small font-small">{{item.statistics.likeCount}}</span>
+        <img class="margin-medium" src="../../assets/dislikesIcon.png">
+        <span class="margin-small font-small">{{item.statistics.dislikeCount}}</span>
+        <img class="margin-medium" src="../../assets/commentsIcon.png">
+        <span class="margin-small font-small">{{item.statistics.commentCount}}</span>
+    </div>
+    <div class="name">{{item.snippet.channelTitle}} {{item.snippet.title}}</div>
+    <div class="flex-center top-large">
+        <button class="button">more..</button>
+    </div>
+</div>
