feat: add search and move button to a separate component

--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -12,6 +12,6 @@
     </div>
     <div class="name">{{item.snippet.channelTitle}} {{item.snippet.title}}</div>
     <div class="flex-center top-large">
-        <button class="button">more..</button>
+        <app-button>more..</app-button>
     </div>
 </div>
