--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-header (searchEmitter)="handleEventFromSearch()"></app-header>
+<app-header (searchEmitter)="handleEventFromSearch()"
+            (sortEmitter)="handleEventFromSort($event)"
+            (textEmitter)="handleEventTextSearch($event)"></app-header>
 <div *ngIf="hasSearch">
-    <app-list></app-list>
+    <app-list [sort]="this.sort" [direction]="this.direction" [search]="this.searchText"></app-list>
 </div>
