--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,13 @@
 <div class="header-block">
     <div class="flex-row">
         <app-logo></app-logo>
-        <app-search (searchEmitter)="handleEventFromSearch()"></app-search>
-        <app-settings class="margin"></app-settings>
+        <app-search (searchEmitter)="handleEventFromSearch()"
+                    (searchTextEmitter)="handleEventTextSearch($event)"></app-search>
+        <app-settings class="margin" (settingsEmitter)="handleEventFromSettings()"></app-settings>
         <app-login-block class="login-position"></app-login-block>
     </div>
-    <div class="margin-top">
-        <app-sort class="sort-position"></app-sort>
+    <div *ngIf="showSettings" class="margin-top">
+        <app-sort class="sort-position" 
+                  (sortEmitter)="handleEventFromSort($event)"></app-sort>
     </div>
 </div>
