--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,6 +1,6 @@
 <div class="grid-container">
     <app-item class="grid-item"
-    *ngFor="let item of this.items"
+    *ngFor="let item of this.items | search:search"
     [item]="item">
   </app-item>
   </div>
