--- a/src/app/settingsButton/settingsButton.component.html
+++ b/src/app/settingsButton/settingsButton.component.html
@@ -1,4 +1,4 @@
 <div (click)="settingsClickHandler()">
     <img alt="main.jpg" 
-         src="../../assets/settingsIcon.png">
+         src="./settingsIcon.png">
 </div>
