fix: add images folder

--- a/src/app/loginBlock/loginBlock.component.html
+++ b/src/app/loginBlock/loginBlock.component.html
@@ -2,5 +2,5 @@
     <span class="bottom">Your Name</span>
     <img class="border-round margin-small"
          alt="main.jpg" 
-         src="./loginIcon.png">
+         src="assets/images/loginIcon.png">
 </div>
