--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,17 +1,23 @@
 <div class="item-block border" [class]="this.borderColor">
-    <img class="image" src = {{item.snippet.thumbnails.default.url}}/>
-    <div class="flex-center">
-        <img src="assets/images/viewsIcon.png">
-        <span class="margin-small font-small">{{item.statistics.viewCount}}</span>
-        <img class="margin-medium" src="assets/images/likesIcon.png">
-        <span class="margin-small font-small">{{item.statistics.likeCount}}</span>
-        <img class="margin-medium" src="assets/images/dislikesIcon.png">
-        <span class="margin-small font-small">{{item.statistics.dislikeCount}}</span>
-        <img class="margin-medium" src="assets/images/commentsIcon.png">
-        <span class="margin-small font-small">{{item.statistics.commentCount}}</span>
-    </div>
-    <div class="name">{{item.snippet.channelTitle}} {{item.snippet.title}}</div>
-    <div class="flex-center top-large">
-        <app-button>more..</app-button>
-    </div>
+  <img class="image" src="{{ item.snippet.thumbnails.default.url }}" />
+  <div class="flex-center">
+    <img src="assets/images/viewsIcon.png" />
+    <span class="margin-small font-small">{{ item.statistics.viewCount }}</span>
+    <img class="margin-medium" src="assets/images/likesIcon.png" />
+    <span class="margin-small font-small">{{ item.statistics.likeCount }}</span>
+    <img class="margin-medium" src="assets/images/dislikesIcon.png" />
+    <span class="margin-small font-small">{{
+      item.statistics.dislikeCount
+    }}</span>
+    <img class="margin-medium" src="assets/images/commentsIcon.png" />
+    <span class="margin-small font-small">{{
+      item.statistics.commentCount
+    }}</span>
+  </div>
+  <div class="name">
+    {{ item.snippet.channelTitle }} {{ item.snippet.title }}
+  </div>
+  <div class="flex-center top-large">
+    <app-button (click)="clickHandler()">more..</app-button>
+  </div>
 </div>
