--- a/src/app/settingsButton/settingsButton.component.html
+++ b/src/app/settingsButton/settingsButton.component.html
@@ -1,4 +1,3 @@
 <div (click)="settingsClickHandler()">
-    <img alt="main.jpg" 
-         src="assets/images/settingsIcon.png">
+    <img src="assets/images/settingsIcon.png">
 </div>
