--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -21,6 +21,11 @@
     left: 420px;
 }
 
+.logout-position {
+    position: relative;
+    left: 500px;
+}
+
 .margin-top {
     margin-top: 40px;
 }
