--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <app-header
-  (searchEmitter)="handleEventFromSearch()"
-  (sortEmitter)="handleEventFromSort($event)"
-  (textEmitter)="handleEventTextSearch($event)"
+  (searchEmitter)="service.handleEventFromSearch()"
 ></app-header>
 <router-outlet></router-outlet>
