--- a/src/app/youTube/pages/cardCreationForm/card.component.html
+++ b/src/app/youTube/pages/cardCreationForm/card.component.html
@@ -2,87 +2,89 @@
     <div class="bold-text">Create new card</div>
     <form [formGroup]="cardForm">
         <label class="small-text" for="title">Title </label>
-        <input  class="input {{cardForm.controls['title'].invalid && 
-        (cardForm.controls['title'].dirty || cardForm.controls['title'].touched) ? 'red-border' : ''}}"
+        <input class="input {{title?.invalid && (title?.dirty || title?.touched) ? 'red-border' : ''}}"
             type="text"
             required
             minlength
             maxlength
             formControlName="title"
             (change)="updateTitle($event)"/>
-        <div *ngIf="cardForm.controls['title'].invalid && 
-                (cardForm.controls['title'].dirty || cardForm.controls['title'].touched)" class="invalid">
-             <div *ngIf="cardForm.controls['title'].errors?.['required']">
+        <div *ngIf="title?.invalid && (title?.dirty || title?.touched)" class="invalid">
+             <div *ngIf="title?.errors?.['required']">
                 Please enter a title
              </div>
-             <div *ngIf="cardForm.controls['title'].errors?.['minlength']">
+             <div *ngIf="title?.errors?.['minlength']">
                 The title is too short
              </div>
-             <div *ngIf="cardForm.controls['title'].errors?.['maxlength']">
+             <div *ngIf="title?.errors?.['maxlength']">
                 The title is too long
              </div>
         </div>
         <label class="small-text" for="description">Description </label>
-        <input  class="input {{cardForm.controls['description'].invalid && 
-        (cardForm.controls['description'].dirty || cardForm.controls['description'].touched) ? 'red-border' : ''}}"
+        <input  class="input {{description?.invalid && (description?.dirty || description?.touched) ? 'red-border' : ''}}"
             type="text"
             name="description"
             maxlength
             formControlName="description"
             (change)="updateDescription($event)"/>  
-            <div *ngIf="cardForm.controls['description'].invalid && 
-            (cardForm.controls['description'].dirty || cardForm.controls['description'].touched)" class="invalid">
-         <div *ngIf="cardForm.controls['description'].errors?.['maxlength']">
+            <div *ngIf="description?.invalid && (description?.dirty || description?.touched)" class="invalid">
+         <div *ngIf="description?.errors?.['maxlength']">
             The description is too long
          </div>
         </div> 
         <label class="small-text" for="image">img </label>
-        <input  class="input {{cardForm.controls['image'].invalid && 
-        (cardForm.controls['image'].dirty || cardForm.controls['image'].touched) ? 'red-border' : ''}}"
+        <input  class="input {{image?.invalid && (image?.dirty || image?.touched) ? 'red-border' : ''}}"
             type="text"
             required
             minlength
             maxlength
             formControlName="image"
             (change)="updateImage($event)"/>
-        <div *ngIf="cardForm.controls['image'].invalid && 
-                (cardForm.controls['image'].dirty || cardForm.controls['image'].touched)" class="invalid">
-             <div *ngIf="cardForm.controls['image'].errors?.['required']">
+        <div *ngIf="image?.invalid && (image?.dirty || image?.touched)" class="invalid">
+             <div *ngIf="image?.errors?.['required']">
                 Please enter a link to the image
              </div>
         </div>    
         <label class="small-text" for="video">Link video </label>
-        <input  class="input {{cardForm.controls['video'].invalid && 
-        (cardForm.controls['video'].dirty || cardForm.controls['video'].touched) ? 'red-border' : ''}}"
+        <input  class="input {{video?.invalid && (video?.dirty || video?.touched) ? 'red-border' : ''}}"
             type="text"
             required
             minlength
             maxlength
             formControlName="video"
             (change)="updateVideo($event)"/>
-        <div *ngIf="cardForm.controls['video'].invalid && 
-                (cardForm.controls['video'].dirty || cardForm.controls['video'].touched)" class="invalid">
-             <div *ngIf="cardForm.controls['video'].errors?.['required']">
+        <div *ngIf="video?.invalid && (video?.dirty || video?.touched)" class="invalid">
+             <div *ngIf="video?.errors?.['required']">
                 Please enter a link to the video
              </div>
         </div> 
         <label class="small-text" for="date">Creation date </label>
-        <input  class="input {{cardForm.controls['date'].invalid && 
-        (cardForm.controls['date'].dirty || cardForm.controls['date'].touched) ? 'red-border' : ''}}"
+        <input  class="input {{date?.invalid && (date?.dirty || date?.touched) ? 'red-border' : ''}}"
             type="date"
             required
             formControlName="date"/>
-        <div *ngIf="cardForm.controls['date'].invalid && 
-                (cardForm.controls['date'].dirty || cardForm.controls['date'].touched)" class="invalid">
-             <div *ngIf="cardForm.controls['date'].errors?.['required']">
+        <div *ngIf="date?.invalid && (date?.dirty || date?.touched)" class="invalid">
+             <div *ngIf="date?.errors?.['required']">
                 Please enter a creation date
              </div>
-             <div class="invalid" *ngIf="cardForm.controls['date'].errors?.['dateInvalid']">
-               {{cardForm.controls['date'].errors?.['dateInvalid']}}
+             <div class="invalid" *ngIf="date?.errors?.['dateInvalid']">
+               {{date?.errors?.['dateInvalid']}}
             </div>
+        </div>
+        <div class="margin-top-medium">
+         <label for="tags">Tags </label>
+         <app-button class="form-button" (click)="addTagHandler()">Add tag</app-button> 
+         <div *ngFor="let control of cardForm.controls.tags.controls; index as i">
+          <input [formControl]="cardForm.controls.tags.controls[i]" type="text" required
+           class="margin-top-medium {{cardForm.controls.tags.controls[i].invalid && (cardForm.controls.tags.controls[i].dirty || cardForm.controls.tags.controls[i].touched) ? 'red-border' : ''}}"/>
+          <div *ngIf="cardForm.controls.tags.controls[i].invalid && (cardForm.controls.tags.controls[i].dirty || cardForm.controls.tags.controls[i].touched)" class="invalid">
+            <div *ngIf="cardForm.controls.tags.controls[i].errors?.['required']">
+               Please enter a tag
+            </div>
+       </div>
+        </div>
         </div> 
         <div class="baseline">
-            <app-button class="form-button" (click)="addTagHandler()">Add tag</app-button> 
             <app-button class="form-button" (click)="resetHandler()">Reset</app-button>    
             <app-button class="form-button" (click)="cardSaveHandler()">Create card</app-button>
         </div>      
