fix: add login form short controls names

--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -2,37 +2,33 @@
     <div class="bold-text">Login</div>
     <form [formGroup]="loginForm" (ngSubmit)="loginHandler()">
         <label class="small-text" for="login">login </label>
-        <input  class="input {{loginForm.controls['login'].invalid && 
-        (loginForm.controls['login'].dirty || loginForm.controls['login'].touched) ? 'red-border' : ''}}"
+        <input  class="input {{login?.invalid && (login?.dirty || login?.touched) ? 'red-border' : ''}}"
             type="text"
             formControlName="login"
             required
             email
             (change)="updateLogin($event)"/>
-        <div *ngIf="loginForm.controls['login'].invalid && 
-                (loginForm.controls['login'].dirty || loginForm.controls['login'].touched)" class="invalid">
-             <div *ngIf="loginForm.controls['login'].errors?.['required']">
+        <div *ngIf="login?.invalid && (login?.dirty || login?.touched)" class="invalid">
+             <div *ngIf="login?.errors?.['required']">
                 Please enter a login email
              </div>
-             <div *ngIf="loginForm.controls['login'].errors?.['email']">
+             <div *ngIf="login?.errors?.['email']">
                 The login email is invalid
              </div>
         </div>
         <label class="small-text" for="password">password </label>
-        <input  class="input {{loginForm.controls['password'].invalid && 
-        (loginForm.controls['password'].dirty || loginForm.controls['password'].touched) ? 'red-border' : ''}}"
+        <input  class="input {{password?.invalid && (password?.dirty || password?.touched) ? 'red-border' : ''}}"
             type="password"
             name="password"
             required
             formControlName="password"
             (change)="updatePassword($event)"/>  
-            <div *ngIf="loginForm.controls['password'].invalid && 
-            (loginForm.controls['password'].dirty || loginForm.controls['password'].touched)" class="invalid">
-         <div *ngIf="loginForm.controls['password'].errors?.['required']">
+            <div *ngIf="password?.invalid && (password?.dirty || password?.touched)" class="invalid">
+         <div *ngIf="password?.errors?.['required']">
                 Please enter a password
          </div>
-         <div class="invalid" *ngIf="loginForm.controls['password'].errors?.['passwordStrength']">
-            Your password isn't strong enough. {{loginForm.controls['password'].errors?.['passwordStrength']}}
+         <div class="invalid" *ngIf="password?.errors?.['passwordStrength']">
+            Your password isn't strong enough. {{password?.errors?.['passwordStrength']}}
         </div>
         </div>     
         <app-button class="login-button" (click)="loginHandler()">Login</app-button>         
