init: add youTube API and remove read from file

--- a/src/app/youTube/components/item/item.component.html
+++ b/src/app/youTube/components/item/item.component.html
@@ -2,12 +2,12 @@
   <img class="image" src="{{ item.snippet.thumbnails.default.url }}" />
   <div class="flex-center">
     <img src="assets/images/viewsIcon.png" />
-    <span class="margin-small font-small">{{ item.statistics.viewCount }}</span>
+    <span class="margin-small font-small">{{ item.statistics.favoriteCount }}</span>
     <img class="margin-medium" src="assets/images/likesIcon.png" />
     <span class="margin-small font-small">{{ item.statistics.likeCount }}</span>
     <img class="margin-medium" src="assets/images/dislikesIcon.png" />
     <span class="margin-small font-small">{{
-      item.statistics.dislikeCount
+      item.statistics.likeCount
     }}</span>
     <img class="margin-medium" src="assets/images/commentsIcon.png" />
     <span class="margin-small font-small">{{
