--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,8 +1,7 @@
 <div class="header-block">
     <div class="flex-row">
         <app-logo></app-logo>
-        <app-search (searchEmitter)="handleEventFromSearch()"
-                    (searchTextEmitter)="handleEventTextSearch($event)"></app-search>
+        <app-search></app-search>
         <app-settings class="margin" (settingsEmitter)="handleEventFromSettings()"></app-settings>
         <app-button (click)=cardCreateHandler() class="create-position">Create card</app-button> 
         <app-login-block class="login-position"></app-login-block>
@@ -10,6 +9,6 @@
     </div>
     <div *ngIf="showSettings" class="margin-top">
         <app-sort class="sort-position" 
-                  (sortEmitter)="handleEventFromSort($event)"></app-sort>
+            (sortEmitter)="handleEventFromSort($event)"></app-sort>
     </div>
 </div>
