--- a/src/app/youTube/components/list/list.component.html
+++ b/src/app/youTube/components/list/list.component.html
@@ -1,6 +1,6 @@
 <div class="grid-container">
     <app-item class="grid-item"
-    *ngFor="let item of this.items"
+    *ngFor="let item of this.wholeData"
     [item]="item">
   </app-item>
   </div>
