feat: add search and login observable

--- a/src/app/core/components/searchInput/search.component.html
+++ b/src/app/core/components/searchInput/search.component.html
@@ -3,6 +3,6 @@
       class="input"
       type="search"
       id="search"
-      (change)="searchChangeHandler($event)"
+      (input)="searchChangeHandler($event)"
     />
   </div>
