--- a/src/app/auth/components/loginBlock/loginBlock.component.html
+++ b/src/app/auth/components/loginBlock/loginBlock.component.html
@@ -3,5 +3,7 @@
     <img class="border-round margin-small"
          alt="main.jpg" 
          src="assets/images/loginIcon.png"
-         (click)="clickHandler()"/>        
+         (click)="clickHandler()"/> 
+    <div *ngIf="loggedIn"><app-button (click)=logoutClickHandler() class="logout-position">Log out</app-button></div>
+    <div *ngIf="!loggedIn"><app-button (click)=loginClickHandler() class="logout-position">Log in</app-button></div> 
 </div>
