--- a/src/app/auth/components/loginBlock/loginBlock.component.html
+++ b/src/app/auth/components/loginBlock/loginBlock.component.html
@@ -4,6 +4,6 @@
          alt="main.jpg" 
          src="assets/images/loginIcon.png"
          (click)="clickHandler()"/> 
-    <div *ngIf="loggedIn"><app-button (click)=logoutClickHandler() class="logout-position">Log out</app-button></div>
-    <div *ngIf="!loggedIn"><app-button (click)=loginClickHandler() class="logout-position">Log in</app-button></div> 
+    <ng-container *ngIf="loggedIn"><app-button (click)=logoutClickHandler() class="logout-position">Log out</app-button></ng-container>
+    <ng-container *ngIf="!loggedIn"><app-button (click)=loginClickHandler() class="logout-position">Log in</app-button></ng-container> 
 </div>
