refactor: refactoring for YouTubeService

--- a/src/app/youTube/components/list/list.component.html
+++ b/src/app/youTube/components/list/list.component.html
@@ -1,6 +1,4 @@
 <div class="grid-container">
-    <app-item class="grid-item"
-    *ngFor="let item of this.items"
-    [item]="item">
+  <app-item class="grid-item" *ngFor="let item of items$ | async" [item]="item">
   </app-item>
-  </div>
+</div>
