--- a/src/app/youTube/pages/main/main.component.html
+++ b/src/app/youTube/pages/main/main.component.html
@@ -1,5 +1,1 @@
- <app-list
-      [sort]="this.sort"
-      [direction]="this.direction"
-      [search]="this.searchText"
-    ></app-list>
+<app-list></app-list>
