--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header-block">
     <div class="flex-row">
         <app-logo></app-logo>
-        <app-search></app-search>
+        <app-search (searchText)="handleSearch($event)"></app-search>
         <app-settings class="margin" (settingsEmitter)="handleEventFromSettings()"></app-settings>
         <app-button (click)=cardCreateHandler() class="create-position">Create card</app-button> 
         <app-login-block class="login-position"></app-login-block>
