--- a/src/app/youTube/pages/details/details.component.html
+++ b/src/app/youTube/pages/details/details.component.html
@@ -3,34 +3,35 @@
       <img src="assets/images/backIcon.png">
   </div>
   <div class="flex shadow">
-    <img class="image" src="{{ this.item.snippet.thumbnails.high.url }}" />
+    <img class="image" src="{{ this.item?.snippet?.thumbnails?.high?.url }}" />
     <div class="info-block">
       <div>
         <div class="spread">
-          <span class="title">{{ this.item.snippet.channelTitle }} {{ this.item.snippet.title }}</span>
-          <span class="small">{{ this.item.snippet.publishedAt | date:"medium" }}</span>
+          <span class="title">{{ this.item?.snippet?.channelTitle  }} {{ this.item?.snippet?.title  }}</span>
+          <span class="small">{{ this.item?.snippet?.publishedAt | date:"medium" }}</span>
         </div>
         <div class="description">Description:</div>
-        <div class="small">{{ this.item.snippet.description }}</div>
+        <div class="small">{{ this.item?.snippet?.description  }}</div>
       </div>
       <div class="statistics">
         <img src="assets/images/viewsIcon.png" />
         <span class="margin-small font-small">{{
-            this.item.statistics.favoriteCount
+          this.item?.statistics?.favoriteCount
         }}</span>
         <img class="margin-medium" src="assets/images/likesIcon.png" />
         <span class="margin-small font-small">{{
-            this.item.statistics.likeCount
+          this.item?.statistics?.likeCount 
         }}</span>
         <img class="margin-medium" src="assets/images/dislikesIcon.png" />
         <span class="margin-small font-small">{{
-            this.item.statistics.likeCount
+          this.item?.statistics?.likeCount 
         }}</span>
         <img class="margin-medium" src="assets/images/commentsIcon.png" />
         <span class="margin-small font-small">{{
-            this.item.statistics.commentCount
+          this.item?.statistics?.commentCount 
         }}</span>
       </div>
     </div>
   </div>
+
 </div>
