--- a/src/app/youTube/pages/favorites/favorites.component.html
+++ b/src/app/youTube/pages/favorites/favorites.component.html
@@ -1,5 +1,5 @@
-<div class="grid-container">
-    <div class="back-button" (click)="backClickHandler()">
+<div class="grid-container flex">
+    <div class="back-button button-position" (click)="backClickHandler()">
         <img src="assets/images/backIcon.png">
     </div>
     <app-item class="grid-item"
